--- a/config.yml
+++ b/config.yml
@@ -35,9 +35,32 @@ pipeline:
   - name: RegexEntityExtractor
     use_lookup_tables: True
 
+policies:
+- name: MemoizationPolicy
+# - name: TEDPolicy
+#   max_history: 10
+#   epochs: 100
+- name: RulePolicy
+
+  # - name: RulePolicy
+
+
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
-policies: null
+# policies: null
+# # No configuration for policies was provided. The following default policies were used to train your model.
+# # If you'd like to customize them, uncomment and adjust the policies.
+# # See https://rasa.com/docs/rasa/policies for more information.
+#   - name: MemoizationPolicy
+#   - name: RulePolicy
+#   - name: UnexpecTEDIntentPolicy
+#     max_history: 5
+#     epochs: 100
+#   - name: TEDPolicy
+#     max_history: 5
+#     epochs: 100
+#     constrain_similarities: truepolicies:
+# policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
